[project]
name = "tibame-tjr101-t1-airflow"
version = "0.1.0"
description = "TJR101-T1-airflow-python-packages"
authors = [
    {name = "TJR101-T1"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandas (>=2.1.4,<2.2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "openai (>=1.79.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=1.4.54,<1.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
